// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Destroy User Email Controller Snapshot Test for invalid token. 1`] = `
{
  "body": {
    "message": "Invalid token, generate new OTP.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User Email Controller Snapshot Test for server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while deleting user data.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Destroy User Email Controller Snapshot Test for successful delete. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullname": "Test User",
      "userId": "mocked-user-id",
      "username": "testUser",
    },
    "message": "User data deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Destroy User Email Controller Snapshot Test for token expired. 1`] = `
{
  "body": {
    "message": "OTP expired, generate new OTP.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User Email Controller Snapshot Test for token missing. 1`] = `
{
  "body": {
    "message": "Token is missing",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User Email Controller Snapshot Test for user inactive. 1`] = `
{
  "body": {
    "message": "Your account is blocked, you can't delete it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User Email Controller Snapshot Test for user not found. 1`] = `
{
  "body": {
    "message": "Invalid request, account not found.",
    "success": false,
  },
  "status": 404,
}
`;
